@@ -45,7 +45,6 @@ clean_compile_output() {
 
     # Remove uninteresting output
     sed -i '/^warning: \[path\] bad path element /d' "$out"
-    sed -i '/^.*warning: Option --illegal-access is deprecated and will be removed in a future release./d' "$out"
     sed -i '/^warning: \[options\] bootstrap class path not set/d' "$out"
     sed -i '/^warning: \[options\] system modules path not set in conjunction with -source 11/d' "$out"
 
@@ -64,9 +63,9 @@ test_wpi_plume_lib() {
 
     rm -rf "$project"
     # Try twice in case of network lossage
-    git clone -q --filter=blob:none "https://github.com/plume-lib/$project.git" || (sleep 60 && git clone -q --filter=blob:none "https://github.com/plume-lib/$project.git")
+    git clone -q --depth=1 "https://github.com/plume-lib/$project.git" || (sleep 60 && git clone -q --depth=1 "https://github.com/plume-lib/$project.git")
 
-    cd "$project" || (echo "can't run: cd $project" && exit 1)
+    cd "$project" || { echo "can't run: cd $project"; exit 2; }
 
     java -cp "$CHECKERFRAMEWORK/checker/dist/checker.jar" org.checkerframework.framework.stub.RemoveAnnotationsForInference . || exit 1
     # The project may not build after running RemoveAnnotationsForInference, because some casts
@@ -110,7 +109,7 @@ test_wpi_plume_lib() {
 
 
 mkdir -p "$TESTDIR"
-cd "$TESTDIR" || (echo "can't do: cd $TESTDIR" && exit 1)
+cd "$TESTDIR" || { echo "can't do: cd $TESTDIR"; exit 2; }
 
 # Get the list of checkers from the project's build.gradle file
 ## TODO: These projects are annotated for additional checkers, like resourceleak. Add to these lists.
